--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,5 +15,16 @@ services:
       - postgres_dev_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
+  redis:
+    image: redis:7-alpine
+    container_name: funquizz-redis-dev
+    restart: unless-stopped
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_dev_data:/data
+    command: redis-server --appendonly yes
+
 volumes:
   postgres_dev_data:
+  redis_dev_data:
