feat(auth): implement JWT authentication with email verification

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,11 @@ JWT_EXPIRES_IN=7d
 # Rate Limiting Configuration
 THROTTLE_TTL=60
 THROTTLE_LIMIT=10
+
+# Mailer Configuration
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USER=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM=your-email@gmail.com
+MAIL_FROM_NAME=FunQuizz
