--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 repomix-output.xml
+.trae/rules/project_rules.md
