feat(auth): implement refresh token and restructure auth DTOs

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,9 @@ NODE_ENV=development
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_SECRET=your-super-secret-refresh-key
+JWT_REFRESH_EXPIRES_IN=7d
 
 # Rate Limiting Configuration
 THROTTLE_TTL=60
@@ -30,3 +32,6 @@ MAIL_USER=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
 MAIL_FROM=your-email@gmail.com
 MAIL_FROM_NAME=FunQuizz
+
+# OTP Configuration
+OTP_EXPIRY_MINUTES=5
